<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校招达人</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_verify_number">VerifyNumberActivity</string>
    <string name="title_activity_feedback">问题反馈</string>
    <string name="title_activity_personal">个人资料</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main_category">MainCategoryActivity</string>
    <string name="title_activity_sub_category">SubCategoryActivity</string>
	<string name="title_activity_update">版本升级</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="quick_register">快速注册</string>
    <string name="edit_hint_phone_number">请输入手机号码</string>
    <string name="edit_hint_password">请输入密码</string>
    <string name="next_step">下一步</string>
    <string name="commit">确认</string>
    <string name="label_verification_title">输入验证码</string>
    <string name="toast_input_verification_code">请输入验证码</string>
    <string name="toast_verification_code_not_match">验证失败，请输入正确的验证码</string>
    <string name="toast_verification_success">验证成功！ 感谢您的注册！</string>
    <string name="toast_verification_failed">验证失败</string>
    <string name="toast_input_phone_number">请输入手机号码</string>
    <string name="toast_invalid_phone_numbers">手机号码格式不对</string>
    <string name="toast_input_password">请输入密码</string>
    <string name="toast_password_too_short">密码长度太短，至少%1$d位</string>
    <string name="toast_repeat_input_password">请再次输入密码</string>
    <string name="toast_passwords_not_match">两次输入的密码不一致</string>
    <string name="toast_send_verification_error">提交验证请求失败，请稍后重试</string>
    <string name="toast_login_failed">登录失败</string>
    <string name="toast_login_user_exist">用户已存在，请直接登录</string>
    <string name="toast_reset_password_user_not_exist">该用户不存在，手机号正确吗？</string>
    <string name="toast_reset_password_failed">重置密码失败</string>
    <string name="toast_reset_password_success">重置密码成功</string>
    <string name="toast_welcome_back">欢迎回来！</string>
    <string name="loading_login">登录中，请稍等...</string>
    <string name="loading_verify">校验中，请稍等...</string>
    <string name="loading_reset">重置中，请稍等...</string>
    <string name="get_verification_code_again">%1$ss 重新获取</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="verification_content_hint">本次注册需要短信验证，已发送验证码至</string>
    <string name="verification_edit_hint">@string/label_verification_title</string>
    <string name="verification_quit_dialog_message">发送信息可能会有延迟，真的确定放弃等待吗？</string>
    <string name="verification_quit_dialog_confirm">放弃</string>
    <string name="verification_quit_dialog_cancel">继续等待</string>
    <string name="label_forgot_password">忘记密码</string>
    <string name="forgot_password">@string/label_forgot_password</string>
    <string name="reset_password_edit_hint_phone_number">输入手机号码</string>
    <string name="reset_password_edit_hint_input_verification_code">输入验证码</string>
    <string name="reset_password_edit_hint_new_password">你的新密码</string>
    <string name="reset_password_edit_hint_repeat_new_password">再次确定新密码</string>
    <string name="reset_password_continue">继续</string>
    <string name="reset_password_tip">为保护隐私，通过短信找回密码后，将清空此账号的所有相关记录！若你只是想修改密码，请登录后在设置中修改。</string>
    <string name="alarm">我的提醒 %条</string>
    <string name="alarm_title">我的提醒 </string>
    <string name="account">账号</string>
    <string name="version_check">检查新版本 (当前: %1$s)</string>
    <string name="issue_title">意见反馈</string>
    <string name="about">关于</string>
    <string name="clear_cache">清除缓存</string>
    <string name="quit">退出</string>
    <string name="alarm_setting">闹钟设置</string>
    <string name="check_update">检查更新</string>
    <string name="support_us">支持我们</string>
    <string name="support_us_remove_ad">支持我们（去除广告）</string>
    <string name="me">我</string>
    <string name="content">内容</string>
    <string name="time">时间</string>
    <string name="address">地点</string>
    <string name="feedback_qq_hint">请输入您的QQ号（选填）</string>
    <string name="feedback_suggestion">请填写您的建议</string>
    <string name="your_email">您的邮箱：</string>
    <string name="feedback">问题反馈</string>
    <string name="submit">提交</string>
    <string name="back">返回</string>
    <string name="can_not_find_version_name">未知</string>
    <string name="download">下载</string>
    <string name="cancel">取消</string>
    <string name="xiaozhao">校招</string>
    <string name="downloading_tips">正在为您下载请稍后</string>
    <string name="update_no_new_version">当前已是最新版本</string>
    <string name="update_new_version">新版本：</string>
    <string name="check_update_failed">检查更新失败，请确保网络已连接</string>
    <string name="dialog_title_login_hint">登录提醒</string>
    <string name="dialog_body_login_for_filter">为保存您的订阅信息，需要登录才能使用该功能</string>
    <string name="ok">好的</string>
    <string name="subscribe_settings">订阅设置</string>

    <string-array name="alarms">
        <item>等待中</item>
        <item>已过时</item>
    </string-array>

    <string name="sms_snippet_template_1">您的验证码是</string>
    <string name="locating">定位中</string>
    <string name="city_wuhan">武汉</string>
    <string name="me_page_title_history">历史记录</string>
    <string name="me_page_title_activity">我的活动</string>
    <string name="info_page_title_all">全部活动</string>
    <string name="info_page_title_filter">我的订阅</string>
    <string name="menu_filter">订阅设置</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_update">版本更新</string>
    <string name="menu_about">关于</string>
    <string name="be_sure">确定</string>
    <string name="sample_main_category_title_1">IT/互联网/通信/电子</string>
    <string name="sample_sub_category_title_1">软件工程师</string>
	<!-- 个人资料 -->
	<string name="personal_base_group_title">基本资料</string>
	<string name="personal_photo">头像</string>
	<string name="personal_nickname">昵称</string>
	<string name="personal_nickname_default">达人%s</string>
	<string name="personal_gender">性别</string>
	<string-array name="personal_gender_options">
        <item>男</item>
        <item>女</item>
    </string-array>
	<string name="personal_phone">手机</string>
	<string name="personal_mail">邮箱</string>
	<string name="personal_more_group_title">更多资料</string>
	<string name="personal_school">学校</string>
	<string name="personal_major">专业</string>
	<string name="personal_grade">年级</string>

	<string name="personal_data_done">资料完成度%d</string>
	
    <string name="publish_time">发布时间:%1$s</string>
    <string name="campus_source">信息来源:%1$s</string>
    <string name="no_activities">暂无活动</string>
    <string name="no_history">暂无历史</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="time_pattern">MM月 dd日</string>
    
    <string name="toast_no_feedback_content">请填写反馈内容</string>
	<string name="toast_feedback_success">反馈成功</string>
	<string name="toast_feedback_fail">反馈失败，请确保您的网络连接</string>
        
    <string-array name="feedback_options">
        <item>界面</item>
        <item>网络</item>
        <item>提醒</item>
        <item>内容</item>
        <item>推送</item>
    </string-array>
</resources>