<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/phone_number_et"
            android:layout_width="fill_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:hint="@string/reset_password_edit_hint_phone_number"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52dp" >

            <EditText
                android:id="@+id/verification_code_et"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:hint="@string/reset_password_edit_hint_input_verification_code"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/request_verification_code_layout"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" >

                <com.campus.xiaozhao.basic.widget.CountDownTimerView
                    android:id="@+id/request_verification_code"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/green_btn_bg"
                    android:enabled="false"
                    android:onClick="clickOnGetVerificationCode"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/new_password_et"
            android:layout_width="fill_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:hint="@string/reset_password_edit_hint_new_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/repeat_new_password_et"
            android:layout_width="fill_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:hint="@string/reset_password_edit_hint_repeat_new_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:onClick="clickOnCommit"
            android:text="@string/commit"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/reset_password_tip"
            android:textColor="@android:color/darker_gray"
            android:textSize="14.5sp" />
    </LinearLayout>

</ScrollView>