<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/phone_number_et"
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10sp"
        android:gravity="left|center"
        android:hint="@string/edit_hint_phone_number"
        android:inputType="phone"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp" />
    
    <EditText
        android:id="@+id/password_et"
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:layout_below="@id/phone_number_et"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10sp"
        android:gravity="left|center"
        android:hint="@string/edit_hint_password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/forgot_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_et"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:padding="3dp"
        android:clickable="true"
        android:onClick="clickOnForgotPassword"
        android:text="@string/forgot_password"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_et"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:padding="3dp"
        android:clickable="true"
        android:onClick="clickOnRegister"
        android:text="@string/quick_register"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />
    
    <Button
        android:id="@+id/auth_btn"
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:onClick="onClickAuth"
        android:textSize="17sp" />

</RelativeLayout>