<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/campus_detail_text_size"
        android:text="@string/company_introduction"/>

    <TextView
        android:id="@+id/company_introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/campus_detail_text_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/campus_detail_text_size"
        android:text="@string/content"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/campus_detail_text_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/campus_detail_text_size"
        android:text="@string/time"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/campus_detail_text_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/campus_detail_text_size"
        android:text="@string/address"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/campus_detail_text_size"/>

    <Button
        android:id="@+id/set_remind"
        android:layout_width="@dimen/campus_detail_button_size"
        android:layout_height="wrap_content"/>
</LinearLayout>