<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".VerifyNumberActivity" >

    <TextView
        android:id="@+id/hint_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/verification_content_hint"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/phone_number_tv"
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:layout_below="@id/hint_tv"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textIsSelectable="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />
    
    <EditText
        android:id="@+id/verification_code_et"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@id/phone_number_tv"
        android:layout_marginTop="20dp"
        android:gravity="left|center"
        android:paddingLeft="10dp"
        android:hint="@string/verification_edit_hint"
        android:inputType="number"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp" />
    
    <com.campus.xiaozhao.basic.widget.CountDownTimerView
        android:id="@+id/request_verification_code"
        android:layout_width="200dp"
        android:layout_height="40dip"
        android:layout_centerInParent="true"
        android:layout_below="@id/verification_code_et"
        android:layout_marginTop="40dp"
        android:background="@drawable/green_btn_bg"
        android:onClick="clickOnGetVerificationCode"
        android:textColor="@android:color/white"
        android:textSize="16.0sp" />
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:layout_marginTop="16.0dip"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:onClick="clickOnCommit"
        android:text="@string/commit"
        android:textSize="17sp" />

</RelativeLayout>